src/np222kk/dv507/a2/test/cases/negative/test_neg_return_01.ofp
void main() {
    
}

# return statement not allowed here
void testFun() {
    return 1;
}